# Slotwise

./: README.md  agents.md  pyproject.toml
.github/workflows/: ci.yml
app/: data_access.py  recommendation_view.py  streamlit_app.py
config/: default.yaml
medscheduler_wrapper/: extract.py  normalize.py  scenario_config.py
models/: calibration.py  demand_scoring.py
optimizer/: eligibility.py  exploration.py  rationale.py  recommend.py
pipeline/: config.py  db.py  run_pipeline.py
pipeline/stages/: availability_stage.py  baseline_stage.py  evaluation_stage.py  extract_stage.py  feature_stage.py  load_stage.py  optimization_stage.py  phase2_utils.py  scoring_stage.py  underbooking_stage.py
specs/initial-mvp/: design-doc.md  spec.md
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase3_2.py  test_phase3_runner.py  test_phase4.py
