[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slotwise"
version = "0.1.0"
description = "Demand-aware pricing engine MVP"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "streamlit>=1.44.0",
  "scikit-learn>=1.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "black>=24.0.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["medscheduler_wrapper*", "pipeline*", "models*", "optimizer*", "app*"]
exclude = ["tests*", "specs*", "sql*", "data*", "config*"]
